--- a/sburjpa/src/main/resources/application.properties
+++ b/sburjpa/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=sburjpa
-
+spring.sql.init.platform=mysql
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testjpa
 spring.datasource.username=jpauser
 spring.datasource.password=jpauser
 
 # ddl setting, show-sql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.sql.init.mode=always
